--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
       }
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6828516280334147"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
