--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
   </style>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6828516280334147"
      crossorigin="anonymous"></script>
+
+  <meta name="google-site-verification" content="a_WyCrax_dc2bgksLcXb7DJnisQTgfaoPXyUA7js-gY" />
 </head>
 <body>
   <div class="container">
